app-limit/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-mount
spec:
  containers:
  - name: debug
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - name: sidecar-server-tls
      mountPath: /etc/nginx/ssl
  volumes:
  - name: sidecar-server-tls
    secret:
      secretName: sidecar-server-tls
