app-limit/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx:alpine
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args:
        - |
          echo 'server {
            listen 8080;
            server_name localhost;
            location / {
              root /usr/share/nginx/html;
              index index.html;
            }
          }' > /etc/nginx/conf.d/default.conf &&
          echo '<h1>Hello from NGINX on port 8080! This App2</h1>' > /usr/share/nginx/html/index.html &&
          nginx -g 'daemon off;'

        volumeMounts:
        - name: client-cert
          mountPath: /etc/client
          readOnly: true
      volumes:
      - name: client-cert
        secret:
          secretName: client-cert
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
    - port: 8080
      targetPort: 8080
